--- a/Settings.html
+++ b/Settings.html
@@ -30,7 +30,7 @@
                 Username
             </div>
             <div class="logout">
-                <a href="E:/InfoSem2/TW2019/OnCo/OnCo/Add.html" class="add">
+                <a href="login.html" class="add">
                     <img src="https://img.icons8.com/bubbles/50/000000/exit.png" alt="LogOut">
                 </a>
             </div>
