--- a/login.html
+++ b/login.html
@@ -19,7 +19,8 @@
                 <div class="l2">
                     <input type="email" required id="loginEmail" placeholder="Type your email"/>
                     <input type="password" required id="loginPassword" placeholder="Type your password"/>
-                    <button type="submit">Login</button>
+                    <!--<button type="submit">Login</button>-->
+                    <a href="Index.html">Login</a>
                 </div>
             </form>
         </div>
