--- a/register.html
+++ b/register.html
@@ -17,8 +17,9 @@
             <input type="password" name="repeatPassword" required minlength="4" id="registerRepeatPassword" placeholder="Repeat password"/>
             <input type="number" min="1" max="100" id="registerAge" placeholder="Type your age"/>
             <input type="text" required id="registerGender" placeholder="Type your gender"/>
-            <button type="submit">Create an account</button>
+            <!--<button type="submit">Create an account</button>-->
         </form>
+        <a href="Index.html">Create an account</a>
     </div>
 </body>
 </html>
