--- a/src/Index.html
+++ b/src/Index.html
@@ -29,7 +29,7 @@
                 Username
             </div>
             <div class="logout">
-                <a href="login.html" class="add">
+                <a href="./pages/login.html" class="add">
                     <img src="https://img.icons8.com/bubbles/50/000000/exit.png" alt="LogOut">
                 </a>
             </div>
@@ -41,11 +41,11 @@
             <a href="Index.html" class="contact">
                 Contacts
             </a>
-            <a href="Add.html" class="add">
+            <a href="./pages/add-contacts.html" class="add">
                 Add Contacts
             </a>
         
-            <a href="Settings.html" class="setting">
+            <a href="./pages/Settings.html" class="setting">
                 Settings
             </a>
         </nav>
