--- a/src/pages/add-contacts.html
+++ b/src/pages/add-contacts.html
@@ -38,10 +38,10 @@
 
     <div class="row">
         <nav>
-            <a href="Index.html" class="contact">
+            <a href="../Index.html" class="contact">
                 Contacts
             </a>
-            <a href="Add.html" class="add">
+            <a href="add-contacts.html" class="add">
                 Add Contacts
             </a>
         
