--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -20,7 +20,7 @@
                     <input type="email" required id="loginEmail" placeholder="Type your email"/>
                     <input type="password" required id="loginPassword" placeholder="Type your password"/>
                     <!--<button type="submit">Login</button>-->
-                    <a href="Index.html">Login</a>
+                    <a href="../Index.html">Login</a>
                 </div>
             </form>
         </div>
