Add register modal

--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -54,7 +54,43 @@
             </div>
         </div>
     </div>
-
+    <div id="openModal" class="modalDialog">
+        <div class="right">
+            <a href="#close" title="Close" class="close">X</a>
+            <div class="registerForm">
+                <div class="header">
+                    <h6 class="over-title">Welcome!</h6>
+                    <h2 class="title">Sing Up</h2>
+                </div>
+                <form class="form">
+                    <div class="form-element">
+                        <label for="Fname">First name</label>
+                        <input type="text" class="form-control" id="Fname" placeholder="Enter your first name" required />
+                    </div>
+                    <div class="form-element">
+                        <label for="Lname">Last name</label>
+                        <input type="text" class="form-control" id="Lname" placeholder="Enter your last name" required />
+                    </div>
+                    <div class="form-element">
+                        <label for="email">Email adress</label>
+                        <input type="email" class="form-control" id="email" placeholder="Enter your email" required />
+                    </div>
+                    <div class="form-element">
+                        <label for="password">Password</label>
+                        <input type="password" class="form-control" id="password" placeholder="Enter your password" required />
+                    </div>
+                    <div class="form-element">
+                        <label for="password2">Confirm Password</label>
+                        <input type="password" class="form-control" id="password2" placeholder="Enter your password again" required />
+                    </div>
+    
+                    <div class="container-btn">
+                        <a class="button" href="../Index.html">Sign Up</a>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 
 </body>
 
