Add mvc register, groups page and view details modal

--- a/src/pages/add-contacts.html
+++ b/src/pages/add-contacts.html
@@ -78,7 +78,7 @@
             <a href="../Index.html">
                 <img src="../images/contacts.png" alt="Contacts" title="Contacts" />
             </a>
-            <a href="./groups.html">
+            <a href="./grupuri.html">
                 <img src="../images/group.png" alt="Groups" title="Groups" />
             </a>
             <a href="./add-contacts.html">
