--- a/src/Index.html
+++ b/src/Index.html
@@ -64,7 +64,7 @@
                         </div>
 
                         <div class="container-btn">
-                            <button type="button">Edit</button>
+                            <button type="button" id="editProfileBtn">Edit</button>
                         </div>
                     </form>
                 </div>
@@ -105,7 +105,7 @@
             <a href="Index.html">
                 <img src="images/contacts.png" alt="Contacts" title="Contacts" />
             </a>
-            <a href="./pages/groups.html">
+            <a href="./pages/grupuri.html">
                 <img src="images/group.png" alt="Groups" title="Groups" />
             </a>
             <a href="./pages/add-contacts.html">
