Add login session

--- a/src/pages/grupuri.html
+++ b/src/pages/grupuri.html
@@ -28,7 +28,7 @@
                 <div class="arrow-up"></div>
                 <div class="dropdown-header">
                     <a href="#openModal"><img src="../images/edit.png"> Update Profile</a> <br />
-                    <a href="./pages/login.html" class="logout"><img src="../images/logout.png"> Log Out</a>
+                    <a href="./pages/login.register.php" class="logout"><img src="../images/logout.png"> Log Out</a>
                 </div>
             </div>
         </div>
@@ -47,18 +47,15 @@
                         </div>
                         <div class="form-element">
                             <label for="email">Email adress</label>
-                            <input type="email" class="form-control" id="email" placeholder="Enter your new email"
-                                required />
+                            <input type="email" class="form-control" id="email" placeholder="Enter your new email" required />
                         </div>
                         <div class="form-element">
                             <label for="password">Password</label>
-                            <input type="password" class="form-control" id="password"
-                                placeholder="Enter your new password" required />
+                            <input type="password" class="form-control" id="password" placeholder="Enter your new password" required />
                         </div>
                         <div class="form-element">
                             <label for="password2">Confirm Password</label>
-                            <input type="password" class="form-control" id="password2"
-                                placeholder="Enter your new password again" required />
+                            <input type="password" class="form-control" id="password2" placeholder="Enter your new password again" required />
                         </div>
 
                         <div class="container-btn">
@@ -78,13 +75,11 @@
                     <form class="form">
                         <div class="form-element">
                             <label for="email">Group name</label>
-                            <input type="email" class="form-control" id="email" placeholder="Enter group name"
-                                required />
+                            <input type="email" class="form-control" id="email" placeholder="Enter group name" required />
                         </div>
                         <div class="form-element">
                             <label for="description">Description</label>
-                            <textarea type="description" id="description" placeholder="Enter description" rows="4"
-                                required></textarea>
+                            <textarea type="description" id="description" placeholder="Enter description" rows="4" required></textarea>
                         </div>
                         <div class="container-btn">
                             <button type="button">Add group</button>
@@ -111,7 +106,8 @@
         <main>
             <div class="title">
                 <div class="page-path">
-                    <p>Home/<h1>Groups</h1>
+                    <p>Home/
+                        <h1>Groups</h1>
                     </p>
                 </div>
             </div>
@@ -119,40 +115,43 @@
             <div class="listcontact">
                 <div class="contactname">
                     <div class="buttons">
-                        <div class="button-group"><a href="#descriptionModal"><img src="../images/arrow-right.png" alt="View Details" title="View Details" /></a></div>
+                        <div class="button-group">
+                            <a href="#descriptionModal"><img src="../images/arrow-right.png" alt="View Details" title="View Details" /></a>
+                        </div>
                     </div>
                     <div class="image">
-                            <img src="../images/logo.png" alt="Contact Photo" />
+                        <img src="../images/logo.png" alt="Contact Photo" />
                     </div>
                     <div class="text">
-                        <p>Informatica <br>
-                            Created on: March 16, 2019
+                        <p>Informatica <br> Created on: March 16, 2019
                         </p>
                     </div>
                 </div>
                 <div class="contactname">
                     <div class="buttons">
-                        <div class="button-group"><a href="#descriptionModal"><img src="../images/arrow-right.png" alt="View Details" title="View Details" /></a></div>
+                        <div class="button-group">
+                            <a href="#descriptionModal"><img src="../images/arrow-right.png" alt="View Details" title="View Details" /></a>
+                        </div>
                     </div>
                     <div class="image">
-                            <img src="../images/logo.png" alt="Contact Photo" />
+                        <img src="../images/logo.png" alt="Contact Photo" />
                     </div>
                     <div class="text">
-                        <p>Informatica <br>
-                            Created on: March 16, 2019
+                        <p>Informatica <br> Created on: March 16, 2019
                         </p>
                     </div>
                 </div>
                 <div class="contactname">
                     <div class="buttons">
-                        <div class="button-group"><a href="#descriptionModal"><img src="../images/arrow-right.png" alt="View Details" title="View Details" /></a></div>
+                        <div class="button-group">
+                            <a href="#descriptionModal"><img src="../images/arrow-right.png" alt="View Details" title="View Details" /></a>
+                        </div>
                     </div>
                     <div class="image">
-                            <img src="../images/logo.png" alt="Contact Photo" />
+                        <img src="../images/logo.png" alt="Contact Photo" />
                     </div>
                     <div class="text">
-                        <p>Informatica <br>
-                            Created on: March 16, 2019
+                        <p>Informatica <br> Created on: March 16, 2019
                         </p>
                     </div>
                 </div>
@@ -169,11 +168,15 @@
                 </div>
                 <form class="form">
                     <div class="lab">
-                        <p>  <h3>Group name:</h3> </p>
+                        <p>
+                            <h3>Group name:</h3>
+                        </p>
                         <p>Informatica</p>
                     </div>
                     <div class="lab">
-                        <p>  <h3>Description</h3> </p>
+                        <p>
+                            <h3>Description</h3>
+                        </p>
                         <p>Este un grup pentru studentii Facultatii de Informatica.....</p>
                     </div>
                 </form>
