--- a/src/pages/add-contacts.html
+++ b/src/pages/add-contacts.html
@@ -31,7 +31,7 @@
                 <div class="arrow-up"></div>
                 <div class="dropdown-header">
                     <a href="#openModal"><img src="../images/edit.png"> Update Profile</a> <br />
-                    <a href="./login.html" class="logout"><img src="../images/logout.png"> Log Out</a>
+                    <a href="./login.register.php" class="logout"><img src="../images/logout.png"> Log Out</a>
                 </div>
             </div>
         </div>
@@ -50,18 +50,15 @@
                         </div>
                         <div class="form-element">
                             <label for="email">Email adress</label>
-                            <input type="email" class="form-control" id="email" placeholder="Enter your new email"
-                                required />
+                            <input type="email" class="form-control" id="email" placeholder="Enter your new email" required />
                         </div>
                         <div class="form-element">
                             <label for="password">Password</label>
-                            <input type="password" class="form-control" id="password"
-                                placeholder="Enter your new password" required />
+                            <input type="password" class="form-control" id="password" placeholder="Enter your new password" required />
                         </div>
                         <div class="form-element">
                             <label for="password2">Confirm Password</label>
-                            <input type="password" class="form-control" id="password2"
-                                placeholder="Enter your new password again" required />
+                            <input type="password" class="form-control" id="password2" placeholder="Enter your new password again" required />
                         </div>
 
                         <div class="container-btn">
@@ -88,7 +85,8 @@
         <main>
             <div class="title">
                 <div class="page-path">
-                    <p>Home/<h1>Add Contacts</h1>
+                    <p>Home/
+                        <h1>Add Contacts</h1>
                     </p>
                 </div>
             </div>
@@ -132,21 +130,18 @@
                     <div class="rowform">
                         <div class="columnform">
                             <label for="adress">Adress</label>
-                            <textarea id="adress" name="adress" rows="3" placeholder="Write the adress..."
-                                required></textarea>
+                            <textarea id="adress" name="adress" rows="3" placeholder="Write the adress..." required></textarea>
                         </div>
                         <div class="columnform">
                             <label for="interests">Interests</label>
-                            <textarea id="interests" name="interests" rows="3" placeholder="Write the interests..."
-                                required></textarea>
+                            <textarea id="interests" name="interests" rows="3" placeholder="Write the interests..." required></textarea>
                         </div>
                     </div>
 
                     <div class="rowform">
                         <div class="description">
                             <label for="description">Description</label>
-                            <textarea id="description" name="description" placeholder="Write a description..." rows="5"
-                                required></textarea>
+                            <textarea id="description" name="description" placeholder="Write a description..." rows="5" required></textarea>
                         </div>
                     </div>
                     <div class="rowform">
